---------------------------------------------------------------------------------------------------
Version: 0.6.2
Date: ????
  Features:
    - Added argument to `misc.ticks_to_timestring` to preserve leading zeroes
  Bugfixes:
    - Fixed math.maxuint being one number too large
---------------------------------------------------------------------------------------------------
Version: 0.6.1
Date: 2021-01-02
  Features:
    - Added proper documentation for the `gui-beta` module
---------------------------------------------------------------------------------------------------
Version: 0.6.0
Date: 2020-11-23
  Features:
    - Added WIP `gui-beta` module
      - This module is experimental, but is currently relatively stable. Use at your own risk. See the source code for documentation.
    - Additional arguments may be passed to `migration.on_config_changed()` to be available in the migration functions
    - Added `data-util.dark_red_button_tileset`
    - Added `flib_tool_button_dark_red` button style
  Changes:
    - Updated to Factorio 1.1
    - Modified `flib_selected_frame_action_button` style to better match the vanilla buttons
    - Made `new_layers` argument to `data-util.create_icons()` optional
    - Removed deprecated require paths for `data-util` and `reverse-defines` modules
---------------------------------------------------------------------------------------------------
Version: 0.5.0
Date: 2020-10-22
  Features:
    - Added indicator sprites
    - Added `flib_indicator` image style
  Changes:
    - Updated thumbnail
    - Changed `table.reduce()` to work with non-arrays
    - Changed `misc.ticks_to_timestring()` to use `game.ticks_played` by default, instead of `game.tick`
  Bugfixes:
    - Fixed a crash with serialise_localised_string (credit to dbeckwith)
---------------------------------------------------------------------------------------------------
Version: 0.4.1
Date: 2020-09-22
  Features: